--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,10 @@
 {
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
+    ],
     "builds": [
       {
-        "src": "client/vite.config.js",
+        "src": "vite.config.js",
         "use": "@vercel/static-build",
         "config": { "distDir": "client/dist" }
       }
